fixed dress gallery layout issues

--- a/themes/coco/_/css/style.less
+++ b/themes/coco/_/css/style.less
@@ -323,6 +323,10 @@ body{
 	margin-bottom: 100px;
 }
 
+.p0{
+	padding: 0;
+}
+
 .indent{
 	//text-indent: 2.5em;
 }
